--- a/src/styles/style.less
+++ b/src/styles/style.less
@@ -8,6 +8,7 @@
 
 html {
   font-size: 16px;
+  scrollbar-gutter: stable;
 }
 
 .wrapper {
